--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,5 +21,5 @@ artifacts:
     - target/springbootApp.jar
     - scripts/start.sh
     - scripts/stop.sh
-    - appspec.yaml
+    - appspec.yml
   discard-paths: yes # 디렉토리를 무시하고 하나의 디렉토리에 위 파일을 이동.
